// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default 1`] = `
<div
  className=" css-124xk26-CardStyle ejy78ug0"
>
  <img
    alt=""
    className=" css-142sfdf-StyledIcon ejy78ug2"
    src="test-image-stub"
  />
  <div
    className=" css-zefd21-TopicStyle ejy78ug6"
  >
    topic
  </div>
  <div
    className=" css-mk6kj1-DescriptionStyle ejy78ug7"
  >
    Description
  </div>
</div>
`;

exports[`with Badge 1`] = `
<div
  className=" css-124xk26-CardStyle ejy78ug0"
>
  <img
    alt=""
    className=" css-142sfdf-StyledIcon ejy78ug2"
    src="test-image-stub"
  />
  <div
    className="css-vz2qld-BadgeStyle ejy78ug3"
  >
    <div
      className="css-1dspmwm-StyledBadge e1sxbycx0"
    >
      BADGETEXT
    </div>
  </div>
  <div
    className=" css-zefd21-TopicStyle ejy78ug6"
  >
    topic
  </div>
  <div
    className=" css-mk6kj1-DescriptionStyle ejy78ug7"
  >
    Description
  </div>
</div>
`;

exports[`with Center Align 1`] = `
<div
  className="center css-124xk26-CardStyle ejy78ug0"
>
  <img
    alt=""
    className="center css-142sfdf-StyledIcon ejy78ug2"
    src="test-image-stub"
  />
  <div
    className="center css-zefd21-TopicStyle ejy78ug6"
  >
    topic
  </div>
  <div
    className="center css-mk6kj1-DescriptionStyle ejy78ug7"
  >
    Description
  </div>
</div>
`;

exports[`with Center Align and Badge 1`] = `
<div
  className="center css-124xk26-CardStyle ejy78ug0"
>
  <img
    alt=""
    className="center css-142sfdf-StyledIcon ejy78ug2"
    src="test-image-stub"
  />
  <div
    className="css-vz2qld-BadgeStyle ejy78ug3"
  >
    <div
      className="css-1dspmwm-StyledBadge e1sxbycx0"
    >
      BADGETEXT
    </div>
  </div>
  <div
    className="center css-zefd21-TopicStyle ejy78ug6"
  >
    topic
  </div>
  <div
    className="center css-mk6kj1-DescriptionStyle ejy78ug7"
  >
    Description
  </div>
</div>
`;

exports[`with Center Align and Link 1`] = `
<a
  className="css-kunpmx-StyledLink ejy78ug1"
  href="https://www.dwolla.com"
  onClick={[Function]}
  onMouseEnter={[Function]}
  rel="noopener noreferrer"
  target="_blank"
>
  <div
    className="center css-124xk26-CardStyle ejy78ug0"
  >
    <img
      alt=""
      className="center css-142sfdf-StyledIcon ejy78ug2"
      src="test-image-stub"
    />
    <div
      className="css-17etk8v-LinkIconStyle ejy78ug4"
    >
      <svg
        width={13}
      />
    </div>
    <div
      className="center css-zefd21-TopicStyle ejy78ug6"
    >
      topic
    </div>
    <div
      className="center css-mk6kj1-DescriptionStyle ejy78ug7"
    >
      Description
    </div>
  </div>
</a>
`;

exports[`with Center Align, Link and Badge 1`] = `
<a
  className="css-kunpmx-StyledLink ejy78ug1"
  href="https://www.dwolla.com"
  onClick={[Function]}
  onMouseEnter={[Function]}
  rel="noopener noreferrer"
  target="_blank"
>
  <div
    className="center css-124xk26-CardStyle ejy78ug0"
  >
    <img
      alt=""
      className="center css-142sfdf-StyledIcon ejy78ug2"
      src="test-image-stub"
    />
    <div
      className="css-vz2qld-BadgeStyle ejy78ug3"
    >
      <div
        className="css-1dspmwm-StyledBadge e1sxbycx0"
      >
        BADGETEXT
      </div>
    </div>
    <div
      className="css-17etk8v-LinkIconStyle ejy78ug4"
    >
      <svg
        width={13}
      />
    </div>
    <div
      className="center css-zefd21-TopicStyle ejy78ug6"
    >
      topic
    </div>
    <div
      className="center css-mk6kj1-DescriptionStyle ejy78ug7"
    >
      Description
    </div>
  </div>
</a>
`;

exports[`with Flex 1`] = `
<div
  className="flex css-124xk26-CardStyle ejy78ug0"
>
  <img
    alt=""
    className=" css-142sfdf-StyledIcon ejy78ug2"
    src="test-image-stub"
  />
  <div
    className="css-1mhe69b-StyledFlexDiv ejy78ug5"
  >
    <div
      className="flex css-zefd21-TopicStyle ejy78ug6"
    >
      topic
    </div>
    <div
      className=" css-mk6kj1-DescriptionStyle ejy78ug7"
    >
      Description
    </div>
  </div>
</div>
`;

exports[`with Flex and Badge 1`] = `
<div
  className="flex css-124xk26-CardStyle ejy78ug0"
>
  <img
    alt=""
    className=" css-142sfdf-StyledIcon ejy78ug2"
    src="test-image-stub"
  />
  <div
    className="css-vz2qld-BadgeStyle ejy78ug3"
  >
    <div
      className="css-1dspmwm-StyledBadge e1sxbycx0"
    >
      BADGETEXT
    </div>
  </div>
  <div
    className="css-1mhe69b-StyledFlexDiv ejy78ug5"
  >
    <div
      className="flex css-zefd21-TopicStyle ejy78ug6"
    >
      topic
    </div>
    <div
      className=" css-mk6kj1-DescriptionStyle ejy78ug7"
    >
      Description
    </div>
  </div>
</div>
`;

exports[`with Flex, Link and Badge 1`] = `
<a
  className="css-kunpmx-StyledLink ejy78ug1"
  href="https://www.dwolla.com"
  onClick={[Function]}
  onMouseEnter={[Function]}
  rel="noopener noreferrer"
  target="_blank"
>
  <div
    className="flex css-124xk26-CardStyle ejy78ug0"
  >
    <img
      alt=""
      className=" css-142sfdf-StyledIcon ejy78ug2"
      src="test-image-stub"
    />
    <div
      className="css-vz2qld-BadgeStyle ejy78ug3"
    >
      <div
        className="css-1dspmwm-StyledBadge e1sxbycx0"
      >
        BADGETEXT
      </div>
    </div>
    <div
      className="css-17etk8v-LinkIconStyle ejy78ug4"
    >
      <svg
        width={13}
      />
    </div>
    <div
      className="css-1mhe69b-StyledFlexDiv ejy78ug5"
    >
      <div
        className="flex css-zefd21-TopicStyle ejy78ug6"
      >
        topic
      </div>
      <div
        className=" css-mk6kj1-DescriptionStyle ejy78ug7"
      >
        Description
      </div>
    </div>
  </div>
</a>
`;

exports[`with Link 1`] = `
<a
  className="css-kunpmx-StyledLink ejy78ug1"
  href="https://www.dwolla.com"
  onClick={[Function]}
  onMouseEnter={[Function]}
  rel="noopener noreferrer"
  target="_blank"
>
  <div
    className=" css-124xk26-CardStyle ejy78ug0"
  >
    <img
      alt=""
      className=" css-142sfdf-StyledIcon ejy78ug2"
      src="test-image-stub"
    />
    <div
      className="css-17etk8v-LinkIconStyle ejy78ug4"
    >
      <svg
        width={13}
      />
    </div>
    <div
      className=" css-zefd21-TopicStyle ejy78ug6"
    >
      topic
    </div>
    <div
      className=" css-mk6kj1-DescriptionStyle ejy78ug7"
    >
      Description
    </div>
  </div>
</a>
`;

exports[`with Link and Badge 1`] = `
<a
  className="css-kunpmx-StyledLink ejy78ug1"
  href="https://www.dwolla.com"
  onClick={[Function]}
  onMouseEnter={[Function]}
  rel="noopener noreferrer"
  target="_blank"
>
  <div
    className=" css-124xk26-CardStyle ejy78ug0"
  >
    <img
      alt=""
      className=" css-142sfdf-StyledIcon ejy78ug2"
      src="test-image-stub"
    />
    <div
      className="css-vz2qld-BadgeStyle ejy78ug3"
    >
      <div
        className="css-1dspmwm-StyledBadge e1sxbycx0"
      >
        BADGETEXT
      </div>
    </div>
    <div
      className="css-17etk8v-LinkIconStyle ejy78ug4"
    >
      <svg
        width={13}
      />
    </div>
    <div
      className=" css-zefd21-TopicStyle ejy78ug6"
    >
      topic
    </div>
    <div
      className=" css-mk6kj1-DescriptionStyle ejy78ug7"
    >
      Description
    </div>
  </div>
</a>
`;
